--- a/catalog-item.html
+++ b/catalog-item.html
@@ -36,12 +36,12 @@
         </header>
         <main>
             <h1>набор для путешествий «Baxter of California»</h1>
-            <section class="breadcrumbs">
+            <div class="breadcrumbs">
                 <a href="#">Главная</a>
                 <a href="#">Магазин</a>
                 <a href="#">Средства для ухода</a>
-                <span>набор для путешествий «Baxter of California»</span>
-            </section>
+                <a>набор для путешествий «Baxter of California»</a>
+            </div>
             <section class="gallery">
                 <img src="http://placehold.it/450x300" width="" height="" alt="foto1">
                 <img src="http://placehold.it/150x100" width="" height="" alt="foto2">
@@ -50,12 +50,12 @@
             </section>
             <section class="product-info">
                 <div class="description">
-                    <span>есть в наличии</span>
-                    <span>Артикул: dexter-ae</span>
+                    <p>есть в наличии</p>
+                    <p>Артикул: dexter-ae</p>
                     <p>
                     Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.
                     </p>
-                    <span>2 900 РУБ.</span>
+                    <p>2 900 РУБ.</p>
                     <a class="btn" href="#">Купить</a>
                 </div>
                 <div class="includes">
@@ -73,10 +73,12 @@
         <footer class="main-footer">
             <div class="container">
                 <section class="footer-contacts">
-                    Барбершоп «Бородинский»<br>
-                    Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-                    <a href="#">Как нас найти?</a><br>
-                    Телефон: +7 (812) 666-02-66
+                    <p>
+                        Барбершоп «Бородинский»<br>
+                        Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+                        <a href="#">Как нас найти?</a><br>
+                        Телефон: +7 (812) 666-02-66
+                    </p>
                 </section>
                 <section class="footer-social">
                     <p>Давайте дружить!</p>
